--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# various .gitignore files suitable for Python projects
-main.py
-*.log
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -9,6 +5,14 @@ __pycache__/
 
 # C extensions
 *.so
+
+# Specialty files
+main.py
+test.py
+secrets.py
+.vscode
+.env
+.uf2
 
 # Distribution / packaging
 .Python
