--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,5 +23,5 @@ nav:
     - Controller PCB: ./assembly/controllerpcbassembly.md
     - Deploy Controller Project: ./assembly/deploycontrollerproject.md
     - Test Controller PCB: ./assembly/controllerpcbtest.md
-    - 5v Power Supply: ./assembly/buckassembly.md
+    - Power Supply: ./assembly/powersupply.md
     
