--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,5 +23,5 @@ nav:
     - Controller PCB: ./assembly/controllerpcbassembly.md
     - Deploy Controller Project: ./assembly/deploycontrollerproject.md
     - Test Controller PCB: ./assembly/controllerpcbtest.md
-    - Power Supply: ./assembly/powersupply.md
-    
+    - Power Management PCB: ./assembly/powermanagementpcb.md
+    - Test Power Management PCB: ./assembly/powermanagementpcbtest.md
