Completed draft of the buck module wiring

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,4 +25,4 @@ nav:
     - Test Controller PCB: ./assembly/controllerpcbtest.md
     - Power Management PCB: ./assembly/powermanagementpcb.md
     - Test Power Management PCB: ./assembly/powermanagementpcbtest.md
-    - Buck Modules and Wiring: ./assembly/buckmodulesandwiring.md
+    - Buck Module Wiring: ./assembly/buckmodulesandwiring.md
