--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,10 +19,10 @@ nav:
     - Actuators: ./assembly/actuatorassembly.md
     - Digit PCBs: ./assembly/digitpcbassembly.md
     - Deploy Digit Project: ./assembly/deploydigitproject.md
-    - Test Digit PCBs: ./assembly/digitpcbtest.md
+    - Digit PCB Test: ./assembly/digitpcbtest.md
     - Controller PCB: ./assembly/controllerpcbassembly.md
     - Deploy Controller Project: ./assembly/deploycontrollerproject.md
-    - Test Controller PCB: ./assembly/controllerpcbtest.md
+    - Controller PCB Test: ./assembly/controllerpcbtest.md
     - Power Management PCB: ./assembly/powermanagementpcb.md
-    - Test Power Management PCB: ./assembly/powermanagementpcbtest.md
+    - Power Management PCB Test: ./assembly/powermanagementpcbtest.md
     - Buck Module Wiring: ./assembly/buckmodulesandwiring.md
