Added UART wiring doc

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,3 +26,4 @@ nav:
     - Power Management PCB: ./assembly/powermanagementpcb.md
     - Power Management PCB Test: ./assembly/powermanagementpcbtest.md
     - Buck Module Wiring: ./assembly/buckmodulesandwiring.md
+    - UART and Relay Wiring: ./assembly/uartandrelaywiring.md
