Draft of display face and pcb doc

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,3 +27,4 @@ nav:
     - Power Management PCB Test: ./assembly/powermanagementpcbtest.md
     - Buck Module Wiring: ./assembly/buckmodulesandwiring.md
     - UART and Relay Wiring: ./assembly/uartandrelaywiring.md
+    - Display Face and PCBs Assembly with Integration Testing: ./assembly/displayfacepcbs.md
