--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,3 +28,4 @@ nav:
     - Buck Module Wiring: ./assembly/buckmodulesandwiring.md
     - UART and Relay Wiring: ./assembly/uartandrelaywiring.md
     - Display Face and PCBs Assembly with Integration Testing: ./assembly/displayfacepcbs.md
+    - Backplate Assembly: ./assembly/backplateassembly.md
