Fixed busted links

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,4 +29,4 @@ nav:
     - UART and Relay Wiring: ./assembly/uartandrelaywiring.md
     - Display Face and PCBs Assembly with Integration Testing: ./assembly/displayfacepcbs.md
     - Backplate and Stand Assembly: ./assembly/backplateassembly.md
-    - Segment Assembly and Installation: ./assembly/finalassembly.md
+    - Segment Assembly and Installation: ./assembly/segmentassembly.md
