added the config setting to run the test animation upon statup

--- a/micropython/pico/conductor/config.json
+++ b/micropython/pico/conductor/config.json
@@ -6,5 +6,6 @@
     "lat": "90",
     "lon": "90",
     "schedule": "schedule_0.json",
-    "timeZone": ""
+    "timeZone": "",
+    "enable_test_digits": true
 }
