added ability to switch between alien and human readable digits

--- a/micropython/pico/conductor/config.json
+++ b/micropython/pico/conductor/config.json
@@ -1,1 +1,1 @@
-{"time": "12", "lon": "90", "lat": "90", "wait": "16", "schedule": "schedule_3.json", "enable_test_digits": true, "tempCF": "F", "timeZone": "", "speed": "85"}
+{"time": "12", "lon": "90", "lat": "90", "wait": "16", "schedule": "schedule_3.json", "enable_test_digits": true, "digitType": 0, "tempCF": "F", "timeZone": "", "speed": "85"}
