added scheduler description

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,5 +36,5 @@ nav:
     - Orientation: ./userguide/orientation.md
     - On/Off Switch: ./userguide/spdtswitch.md
     - Web Service Settings: ./userguide/websettings.md
-    - Schedule Creation: ./userguide/schedule.md
+    - Schedule Creation and Management: ./userguide/schedule.md
     - Table of Human and Alien Digit Type: ./userguide/digittype.md
